@@ -1,7 +1,6 @@
 package org.theoriok.inventory.persistence.mappers;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 public interface EntityMapper<D, E> {
     E toEntity(D domainObject);
@@ -11,12 +10,12 @@ public interface EntityMapper<D, E> {
     default Collection<E> toEntities(Collection<D> domainObjects) {
         return domainObjects.stream()
             .map(this::toEntity)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     default Collection<D> toDomainObjects(Collection<E> entities) {
         return entities.stream()
             .map(this::toDomainObject)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
